GL/Projet_GL/src/test/deca/context/valid/sansObjet/expr/expr_arithmetic_precedence.deca
// Test : expr_arithmetic_precedence
// But : tester la priorité des opérateurs arithmétiques.
// Couvre : +, *, associativité, typage expression.
// Résultat attendu : compilation sans erreur.

{
    int a;
    a = 3 + 4 * 2;
    print(a);
}
